--- a/index.html
+++ b/index.html
@@ -11,16 +11,65 @@
       sizes="32x32"
       href="./images/favicon-32x32.png"
     />
+    <link rel="stylesheet" href="css/normalize.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Rubik:wght@400;500&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <footer>
-      <p class="attribution">
-        Challenge by
-        <a href="https://www.frontendmentor.io?ref=challenge" target="_blank"
-          >Frontend Mentor</a
-        >. Coded by
-        <a href="https://patriktomek.cz/" target="_blank">Patrik Tomek</a>.
-      </p>
-    </footer>
+    <div class="container">
+      <div class="content_container">
+        <div class="nav-bar">
+          <a href="" class="logo">
+            <img
+              src="images/logo-bookmark.svg"
+              alt="Bookmark logo"
+              class="logo_img"
+            />
+          </a>
+          <ul class="main-nav">
+            <li class="main-nav_btn"><a href="">Features</a></li>
+            <li class="main-nav_btn"><a href="">Pricing</a></li>
+            <li class="main-nav_btn"><a href="">Contact</a></li>
+            <li class="login_btn"><a href="">Login</a></li>
+          </ul>
+        </div>
+
+        <section id="main">
+          <div class="main-text_container">
+            <h1>A Simple Bookmark Manager</h1>
+            <p>
+              A clean and simple interface to organize your favourite websites.
+              Open a new browser tab and see your sites load instantly. Try it
+              for free.
+            </p>
+            <button class="get-chrome_btn">Get it on Chrome</button>
+            <button class="get-firefox_btn">Get it on Firefox</button>
+          </div>
+          <img
+            src="images/illustration-hero.svg"
+            alt="Monitor illustration"
+            class="main_img"
+          />
+          <div class="decor"></div>
+        </section>
+
+        <footer>
+          <p class="attribution">
+            Challenge by
+            <a
+              href="https://www.frontendmentor.io?ref=challenge"
+              target="_blank"
+              >Frontend Mentor</a
+            >. Coded by
+            <a href="https://patriktomek.cz/" target="_blank">Patrik Tomek</a>.
+          </p>
+        </footer>
+      </div>
+    </div>
   </body>
 </html>
