--- a/index.html
+++ b/index.html
@@ -58,7 +58,157 @@
           <div class="decor"></div>
         </section>
 
+        <section id="features">
+          <h2>Features</h2>
+          <p>
+            Our aim is to make it quick and easy for you to access your
+            favourite websites. Your bookmarks sync between your devices so you
+            can access them on the go.
+          </p>
+        </section>
+
+        <section id="extension-download">
+          <h2>Download the extension</h2>
+          <p class="extension-download_par">
+            We’ve got more browsers in the pipeline. Please do let us know if
+            you’ve got a favourite you’d like us to prioritize.
+          </p>
+          <ul class="extensions-list">
+            <li id="chrome-extension">
+              <img
+                class="browser-logo_img"
+                src="images/logo-chrome.svg"
+                alt="Chrome logo"
+              />
+              <h3>Add to Chrome</h3>
+              <p class="browser-par">Minimum version 62</p>
+              <img class="browser-dots_img" src="images/bg-dots.svg" alt="" />
+              <button class="add-extension_btn">Add & Install Extension</button>
+            </li>
+            <li id="firefox-extension">
+              <img
+                class="browser-logo_img"
+                src="images/logo-firefox.svg"
+                alt="Firefox logo"
+              />
+              <h3>Add to Firefox</h3>
+              <p class="browser-par">Minimum version 55</p>
+              <img class="browser-dots_img" src="images/bg-dots.svg" alt="" />
+              <button class="add-extension_btn">Add & Install Extension</button>
+            </li>
+            <li id="opera-extension">
+              <img
+                class="browser-logo_img"
+                src="images/logo-opera.svg"
+                alt="Opera logo"
+              />
+              <h3>Add to Opera</h3>
+              <p class="browser-par">Minimum version 46</p>
+              <img class="browser-dots_img" src="images/bg-dots.svg" alt="" />
+              <button class="add-extension_btn">Add & Install Extension</button>
+            </li>
+          </ul>
+        </section>
+
+        <section id="faq_section">
+          <h2>Frequently Asked Questions</h2>
+          <p class="browser-par">
+            Here are some of our FAQs. If you have any other questions you’d
+            like answered please feel free to email us.
+          </p>
+          <ul class="faq-accordion">
+            <hr />
+            <li>
+              <h3 class="faq-question">
+                What is Bookmark?
+                <div class="faq-arrow"></div>
+              </h3>
+              <p class="faq-answer">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce
+                tincidunt justo eget ultricies fringilla. Phasellus blandit
+                ipsum quis quam ornare mattis.
+              </p>
+            </li>
+            <hr />
+            <li>
+              <h3 class="faq-question">
+                How can I request a new browser?
+                <div class="faq-arrow"></div>
+              </h3>
+              <p class="faq-answer">
+                Vivamus luctus eros aliquet convallis ultricies. Mauris augue
+                massa, ultricies non ligula. Suspendisse imperdiet. Vivamus
+                luctus eros aliquet convallis ultricies. Mauris augue massa,
+                ultricies non ligula. Suspendisse imperdie tVivamus luctus eros
+                aliquet convallis ultricies. Mauris augue massa, ultricies non
+                ligula. Suspendisse imperdiet.
+              </p>
+            </li>
+            <hr />
+            <li>
+              <h3 class="faq-question">
+                Is there a mobile app?
+                <div class="faq-arrow"></div>
+              </h3>
+              <p class="faq-answer">
+                Sed consectetur quam id neque fermentum accumsan. Praesent
+                luctus vestibulum dolor, ut condimentum urna vulputate eget.
+                Cras in ligula quis est pharetra mattis sit amet pharetra purus.
+                Sed sollicitudin ex et ultricies bibendum.
+              </p>
+            </li>
+            <hr />
+            <li>
+              <h3 class="faq-question">
+                What about other Chromium browsers?
+                <div class="faq-arrow"></div>
+              </h3>
+              <p class="faq-answer">
+                Integer condimentum ipsum id imperdiet finibus. Vivamus in
+                placerat mi, at euismod dui. Aliquam vitae neque eget nisl
+                gravida pellentesque non ut velit.
+              </p>
+            </li>
+            <hr />
+          </ul>
+          <button class="more-info_btn">More Info</button>
+        </section>
+
+        <section id="contact-us">
+          <h3>35,000+ already joined</h3>
+          <h2>Stay up-to-date with what we’re doing</h2>
+          <form action="submit" class="contact-us_form">
+            <input type="text" placeholder="Enter your email address" />
+            <button class="contact-us_btn">Contact Us</button>
+          </form>
+        </section>
+
         <footer>
+          <nav>
+            <a href="" class="logo">
+              <img
+                src="images/logo-bookmark2.svg"
+                alt="Bookmark logo"
+                class="logo_img"
+              />
+            </a>
+            <ul class="footer-nav">
+              <li><a href="">Features</a></li>
+              <li><a href="">Pricing</a></li>
+              <li><a href="">Contact</a></li>
+            </ul>
+          </nav>
+          <ul class="socials">
+            <li class="facebook_social">
+              <a href="https://www.facebook.com/" target="_blank"></a>
+            </li>
+            <li class="twitter_social">
+              <a href="https://twitter.com/" target="_blank"></a>
+            </li>
+          </ul>
+        </footer>
+
+        <div>
           <p class="attribution">
             Challenge by
             <a
@@ -68,8 +218,11 @@
             >. Coded by
             <a href="https://patriktomek.cz/" target="_blank">Patrik Tomek</a>.
           </p>
-        </footer>
+        </div>
       </div>
     </div>
+
+    <script src="js/jquery-2.1.1.min.js"></script>
+    <script src="js/script.js"></script>
   </body>
 </html>
