--- a/index.html
+++ b/index.html
@@ -60,11 +60,87 @@
 
         <section id="features">
           <h2>Features</h2>
-          <p>
+          <p class="features_main-par">
             Our aim is to make it quick and easy for you to access your
             favourite websites. Your bookmarks sync between your devices so you
             can access them on the go.
           </p>
+          <div class="paragraph-slider">
+            <div class="nav-bar__paragraph-slider">
+              <h3>
+                <a href="" class="nav-header_slider bookmark_btn" id="active"
+                  >Simple Bookmarking</a
+                >
+              </h3>
+              <h3>
+                <a href="" class="nav-header_slider intelligent-search_btn"
+                  >Speedy Searching</a
+                >
+              </h3>
+              <h3>
+                <a href="" class="nav-header_slider share-bookmarks_btn"
+                  >Easy Sharing</a
+                >
+              </h3>
+            </div>
+
+            <div class="slider-page_container">
+              <div class="slider_page simple-bookmarking_page active_page">
+                <div class="img-part_slider">
+                  <img
+                    class="slider-page_img"
+                    src="./images/illustration-features-tab-1.svg"
+                    alt=""
+                  />
+                </div>
+                <div class="slider-page_text bookmark_page">
+                  <h2>Bookmark in one click</h2>
+                  <p>
+                    Organize your bookmarks however you like. Our simple
+                    drag-and-drop interface gives you complete control over how
+                    you manage your favourite sites.
+                  </p>
+                  <button class="more-info_btn">More Info</button>
+                </div>
+              </div>
+              <div class="slider_page slider-page_text intelligent-search_page">
+                <div class="img-part_slider">
+                  <img
+                    class="slider-page_img"
+                    src="./images/illustration-features-tab-2.svg"
+                    alt=""
+                  />
+                </div>
+                <div class="slider-page_text">
+                  <h2>Intelligent search</h2>
+                  <p>
+                    Our powerful search feature will help you find saved sites
+                    in no time at all. No need to trawl through all of your
+                    bookmarks.
+                  </p>
+                  <button class="more-info_btn">More Info</button>
+                </div>
+              </div>
+              <div class="slider_page slider-page_text share-bookmarks_page">
+                <div class="img-part_slider">
+                  <img
+                    class="slider-page_img"
+                    src="./images/illustration-features-tab-3.svg"
+                    alt=""
+                  />
+                </div>
+                <div class="slider-page_text">
+                  <h2>Share your bookmarks</h2>
+                  <p>
+                    Easily share your bookmarks and collections with others.
+                    Create a shareable link that you can send at the click of a
+                    button.
+                  </p>
+                  <button class="more-info_btn">More Info</button>
+                </div>
+              </div>
+            </div>
+          </div>
         </section>
 
         <section id="extension-download">
@@ -178,7 +254,13 @@
           <h3>35,000+ already joined</h3>
           <h2>Stay up-to-date with what we’re doing</h2>
           <form action="submit" class="contact-us_form">
-            <input type="text" placeholder="Enter your email address" />
+            <div>
+              <input type="text" placeholder="Enter your email address" />
+              <div class="email-error_input-icon"></div>
+              <div class="email-error_sign">
+                Whoops, make sure it's an email
+              </div>
+            </div>
             <button class="contact-us_btn">Contact Us</button>
           </form>
         </section>
