Email validation (jQuery)

--- a/index.html
+++ b/index.html
@@ -253,9 +253,9 @@
         <section id="contact-us">
           <h3>35,000+ already joined</h3>
           <h2>Stay up-to-date with what we’re doing</h2>
-          <form action="submit" class="contact-us_form">
+          <form class="contact-us_form">
             <div>
-              <input type="text" placeholder="Enter your email address" />
+              <input id="email_input" type="email" placeholder="Enter your email address" />
               <div class="email-error_input-icon"></div>
               <div class="email-error_sign">
                 Whoops, make sure it's an email
