--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
             alt="Monitor illustration"
             class="main_img"
           />
-          <div class="decor"></div>
+          <div class="dcr"><div class="decor"></div></div>
         </section>
 
         <section id="features">
@@ -84,7 +84,8 @@
               </h3>
             </div>
 
-            <div class="slider-page_container">
+            <div id="slider-page_container" class="slider-page_container">
+              <div class="dcr"><div class="decor decor_slider"></div></div>
               <div class="slider_page simple-bookmarking_page active_page">
                 <div class="img-part_slider">
                   <img
@@ -188,7 +189,7 @@
 
         <section id="faq_section">
           <h2>Frequently Asked Questions</h2>
-          <p class="browser-par">
+          <p class="faq-par">
             Here are some of our FAQs. If you have any other questions you’d
             like answered please feel free to email us.
           </p>
