--- a/index.html
+++ b/index.html
@@ -23,6 +23,34 @@
   <body>
     <div class="container">
       <div class="content_container">
+        <div class="mobile-menu_btn"></div>
+
+        <div id="mobile-menu_overlay">
+          <img
+            src="./images/logo-bookmark_overlay.svg"
+            alt="Bookmark"
+            id="mobile-logo_overlay"
+          />
+          <img src="./images/icon-close.svg" alt="close" />
+          <ul id="mobile-nav_overlay">
+            <hr />
+            <li><a href="">Features</a></li>
+            <hr />
+            <li><a href="">Pricing</a></li>
+            <hr />
+            <li><a href="">Contact</a></li>
+            <hr />
+            <li><a href="">Login</a></li>
+          </ul>
+          <ul class="socials_overlay">
+            <li class="facebook_social">
+              <a href="https://www.facebook.com/" target="_blank"></a>
+            </li>
+            <li class="twitter_social">
+              <a href="https://twitter.com/" target="_blank"></a>
+            </li>
+          </ul>
+        </div>
         <div class="nav-bar">
           <a href="" class="logo">
             <img
@@ -67,6 +95,7 @@
           </p>
           <div class="paragraph-slider">
             <div class="nav-bar__paragraph-slider">
+              <hr class="respon" />
               <h3>
                 <a href="" class="nav-header_slider bookmark_btn" id="active"
                   >Simple Bookmarking</a
@@ -256,7 +285,11 @@
           <h2>Stay up-to-date with what we’re doing</h2>
           <form class="contact-us_form">
             <div>
-              <input id="email_input" type="email" placeholder="Enter your email address" />
+              <input
+                id="email_input"
+                type="email"
+                placeholder="Enter your email address"
+              />
               <div class="email-error_input-icon"></div>
               <div class="email-error_sign">
                 Whoops, make sure it's an email
