Mobile/Responsive menu

--- a/index.html
+++ b/index.html
@@ -24,34 +24,17 @@
     <div class="container">
       <div class="content_container">
         <div class="mobile-menu_btn"></div>
-
-        <div id="mobile-menu_overlay">
-          <img
-            src="./images/logo-bookmark_overlay.svg"
-            alt="Bookmark"
-            id="mobile-logo_overlay"
-          />
-          <img src="./images/icon-close.svg" alt="close" />
-          <ul id="mobile-nav_overlay">
-            <hr />
-            <li><a href="">Features</a></li>
-            <hr />
-            <li><a href="">Pricing</a></li>
-            <hr />
-            <li><a href="">Contact</a></li>
-            <hr />
-            <li><a href="">Login</a></li>
-          </ul>
-          <ul class="socials_overlay">
-            <li class="facebook_social">
-              <a href="https://www.facebook.com/" target="_blank"></a>
-            </li>
-            <li class="twitter_social">
-              <a href="https://twitter.com/" target="_blank"></a>
-            </li>
-          </ul>
-        </div>
-        <div class="nav-bar">
+        <img
+          src="./images/logo-bookmark_overlay.svg"
+          alt="Bookmark"
+          id="mobile-logo_overlay"
+        />
+        <img
+          id="mobile-menu_close"
+          src="./images/icon-close.svg"
+          alt="close"
+        />
+        <nav class="nav-bar">
           <a href="" class="logo">
             <img
               src="images/logo-bookmark.svg"
@@ -65,7 +48,15 @@
             <li class="main-nav_btn"><a href="">Contact</a></li>
             <li class="login_btn"><a href="">Login</a></li>
           </ul>
-        </div>
+          <ul class="socials_overlay">
+            <li class="facebook_social">
+              <a href="https://www.facebook.com/" target="_blank"></a>
+            </li>
+            <li class="twitter_social">
+              <a href="https://twitter.com/" target="_blank"></a>
+            </li>
+          </ul>
+        </nav>
 
         <section id="main">
           <div class="main-text_container">
