--- a/index.html
+++ b/index.html
@@ -29,11 +29,7 @@
           alt="Bookmark"
           id="mobile-logo_overlay"
         />
-        <img
-          id="mobile-menu_close"
-          src="./images/icon-close.svg"
-          alt="close"
-        />
+        <img id="mobile-menu_close" src="./images/icon-close.svg" alt="close" />
         <nav class="nav-bar">
           <a href="" class="logo">
             <img
