Logo link to page

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         />
         <img id="mobile-menu_close" src="./images/icon-close.svg" alt="close" />
         <nav class="nav-bar">
-          <a href="" class="logo">
+          <a href="https://patriktomek.github.io/Bookmark-landing-page/" class="logo">
             <img
               src="images/logo-bookmark.svg"
               alt="Bookmark logo"
@@ -288,7 +288,7 @@
 
         <footer>
           <nav>
-            <a href="" class="logo">
+            <a href="https://patriktomek.github.io/Bookmark-landing-page/" class="logo">
               <img
                 src="images/logo-bookmark2.svg"
                 alt="Bookmark logo"
